--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.4.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2"
   },
@@ -20,6 +19,8 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "daisyui": "^3.1.0",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.0.0"
   }
 }
