--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "npm run tailwind && vite build",
+    "preview": "vite preview",
+    "tailwind": "npx tailwindcss -i ./src/App.css -o ./dist/output.css --watch"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.4.0",
