--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "daisyui": "^3.1.0",
+    "prettier": "2.8.8",
     "tailwindcss": "^3.3.2",
     "vite": "^4.0.0"
   }
