--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
-    "react-router-dom": "^6.6.2"
+    "react-router-dom": "^6.6.2",
+    "tailwindcss": "^3.3.2",
+    "daisyui": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
-    "daisyui": "^3.1.0",
     "prettier": "2.8.8",
-    "tailwindcss": "^3.3.2",
     "vite": "^4.0.0"
   }
 }
