--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "npm run tailwind && vite build",
+    "build": "npm run tailwind-build && vite build",
     "preview": "vite preview",
     "tailwind": "npx tailwindcss -i ./src/App.css -o ./dist/output.css --watch",
     "tailwind-build": "npx tailwindcss -i ./src/App.css -o ./dist/output.css"
