--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.4.0",
+    "cra-template-pwa": "^2.0.0",
+    "daisyui": "^3.1.0",
     "heroicons-react": "^1.4.1",
     "react": "^18.2.0",
+    "react-app-rewire-workbox": "^2.0.1",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.6.2",
-    "tailwindcss": "^3.3.2",
-    "daisyui": "^3.1.0"
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
